minikube/resource-testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  selector:
    matchLabels:
      app: fleetman-queue
  replicas: 2
  template:
    metadata:
      labels:
        app: fleetman-queue
    spec:
      containers:
        - name: queue
          image: richardchesterwood/k8s-fleetman-queue:release2
          resources:
            requests:
              memory: 300Mi
              cpu: 100m
            limits:
              memory: 400Mi
              cpu: 100m
