minikube/test-job.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-job
spec:
  containers:
    - name: long-job
      image: python:rc-slim
      command: ["python"]
      args: ["-c","import time; print('Starting'); time.sleep(30); print('Done')"]
  restartPolicy: Never
