minikube/workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  selector:
    matchLabels:
      app: fleetman-queue
  replicas: 1
  template:
    metadata:
      labels:
        app: fleetman-queue
    spec:
      containers:
        - name: queue
          image: richardchesterwood/k8s-fleetman-queue:resources
          resources:
            requests:
              memory: 200Mi
              cpu: 50m

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
spec:
  selector:
    matchLabels:
      app: position-simulator
  replicas: 1
  template:
    metadata:
      labels:
        app: position-simulator
    spec:
      containers:
        - name: position-simulator
          image: richardchesterwood/k8s-fleetman-position-simulator:resources
          resources:
            requests:
              memory: 200Mi
              cpu: 50m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-tracker
spec:
  selector:
    matchLabels:
      app: position-tracker
  replicas: 1
  template:
    metadata:
      labels:
        app: position-tracker
    spec:
      containers:
        - name: position-tracker
          image: richardchesterwood/k8s-fleetman-position-tracker:resources
          resources:
            requests:
              memory: 200Mi
              cpu: 50m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: richardchesterwood/k8s-fleetman-api-gateway:performance
          #image: richardchesterwood/k8s-fleetman-api-gateway:resource
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              memory: 200Mi
              cpu: 50m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  minReadySeconds: 30
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: richardchesterwood/k8s-fleetman-webapp-angular:release2
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
